{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 7,
  "lineage": "19befd59-e25c-8b2f-0e94-6e19392abd33",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "SH-JHAZ-INFMGMT-001-NSG-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/97a0f7b9-3bf7-4c59-99a8-064c85ed7df7/resourceGroups/SH-JHAZ-INFMGMT-001-RGP-01/providers/Microsoft.Network/networkSecurityGroups/SH-JHAZ-INFMGMT-001-NSG-01",
            "location": "eastus",
            "name": "SH-JHAZ-INFMGMT-001-NSG-01",
            "resource_group_name": "SH-JHAZ-INFMGMT-001-RGP-01",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "SH-JHAZ-INFMGMT-901-NSG-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/97a0f7b9-3bf7-4c59-99a8-064c85ed7df7/resourceGroups/SH-JHAZ-INFMGMT-901-RGP-01/providers/Microsoft.Network/networkSecurityGroups/SH-JHAZ-INFMGMT-901-NSG-01",
            "location": "eastus",
            "name": "SH-JHAZ-INFMGMT-901-NSG-01",
            "resource_group_name": "SH-JHAZ-INFMGMT-901-RGP-01",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "SH-JHAZ-INFRA-001-NSG-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/97a0f7b9-3bf7-4c59-99a8-064c85ed7df7/resourceGroups/SH-JHAZ-INFRA-001-RGP-01/providers/Microsoft.Network/networkSecurityGroups/SH-JHAZ-INFRA-001-NSG-01",
            "location": "eastus",
            "name": "SH-JHAZ-INFRA-001-NSG-01",
            "resource_group_name": "SH-JHAZ-INFRA-001-RGP-01",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "SH-JHAZ-POC-901-NSG-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/97a0f7b9-3bf7-4c59-99a8-064c85ed7df7/resourceGroups/SH-JHAZ-POC-901-RGP-01/providers/Microsoft.Network/networkSecurityGroups/SH-JHAZ-POC-901-NSG-01",
            "location": "eastus",
            "name": "SH-JHAZ-POC-901-NSG-01",
            "resource_group_name": "SH-JHAZ-POC-901-RGP-01",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "SH-JHAZ-SHARED-001-NSG-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/97a0f7b9-3bf7-4c59-99a8-064c85ed7df7/resourceGroups/SH-JHAZ-SHARED-001-RGP-01/providers/Microsoft.Network/networkSecurityGroups/SH-JHAZ-SHARED-001-NSG-01",
            "location": "eastus",
            "name": "SH-JHAZ-SHARED-001-NSG-01",
            "resource_group_name": "SH-JHAZ-SHARED-001-RGP-01",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "SH-JHAZ-SHARED-901-NSG-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/97a0f7b9-3bf7-4c59-99a8-064c85ed7df7/resourceGroups/SH-JHAZ-SHARED-901-RGP-01/providers/Microsoft.Network/networkSecurityGroups/SH-JHAZ-SHARED-901-NSG-01",
            "location": "eastus",
            "name": "SH-JHAZ-SHARED-901-NSG-01",
            "resource_group_name": "SH-JHAZ-SHARED-901-RGP-01",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}